<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/bus_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bus_name"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait_station" />

        <TextView
            android:id="@+id/station_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_name"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>