<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal" >

    <ImageView
        android:id="@+id/backBus"
        android:layout_width="90.0dip"
        android:layout_height="90.0dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30.0dp"
        android:background="@drawable/ic_launcher"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backBus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/t1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_version_test"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/about_tip_1"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/t3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ico_qun"
        android:text="@string/qq"
        android:textColor="@color/black"
        android:textSize="15sp" />


</RelativeLayout>