<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/host_background"
    tools:context=".ui.GpsWaitingActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/card"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/line_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/line_direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/line_wait_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/card"
            android:orientation="vertical" >

            <TextView
                style="@style/gpsTextTitle"
                android:text="@string/gps_info_1" />

            <TextView
                android:id="@+id/line_wait_info_1"
                style="@style/gpsTextContent"
                android:text="@string/no_gps_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/card"
            android:orientation="vertical" >

            <TextView
                style="@style/gpsTextTitle"
                android:text="@string/gps_info_2" />

            <TextView
                android:id="@+id/line_wait_info_2"
                style="@style/gpsTextContent"
                android:text="@string/no_gps_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/card"
            android:orientation="vertical" >

            <TextView
                style="@style/gpsTextTitle"
                android:text="@string/gps_info_3" />

            <TextView
                android:id="@+id/line_wait_info_3"
                style="@style/gpsTextContent"
                android:text="@string/no_gps_info" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>